src/cses/grid_path_description/clang-tidy.txt
1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/grid_path_description/grid_path_description.cpp.
/Users/michael/repos/competitive-programming/src/cses/grid_path_description/grid_path_description.cpp:3:10: error: 'array' file not found [clang-diagnostic-error]
    3 | #include <array>
      |          ^~~~~~~
Found compiler error(s).
